--- a/TeaTrack/my-app/package.json
+++ b/TeaTrack/my-app/package.json
@@ -32,7 +32,9 @@
     "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.4",
+    "bootstrap": "^5.3.8",
     "express": "^5.1.0",
+    "jquery": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
